attempt at fixing autoplay issue on mobile

--- a/src/components/Briquetters/Briquetters.scss
+++ b/src/components/Briquetters/Briquetters.scss
@@ -17,7 +17,7 @@
         background-size: 100% 100%;
         height: 20rem;
 
-        .image {
+        img, .image {
             height: 20rem;
             position: relative;
 
@@ -41,7 +41,7 @@
     }
 
     .card-1 {
-        background-image: url('../../images/ARS1000.jpg');     
+        //background-image: url('../../images/ARS1000.jpg');     
     }
 
     .card-2 {
